added orbs. initial commit.
let tthe orb commence

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+logs/*
+saves/*
+resourcepacks/*
+world/*
+config/*
+.settings/*
+usercache.json
+usernamecache.json
+whitelist.json
+ops.json
+eula.txt
+options.txt
+server.properties
+banned-ips.json
+banned-players.json
+
 *.class
 
 # Mobile Tools for Java (J2ME)
